This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

29-Nov-2002 (Lars Duening)  (3.3.314)
  - (sysmalloc.c) This file is no longer needed (actually it has been
      useless since 3.2.8-dev.188).
  - (dumpstat.c) Didn't compile with MALLOC_sysmalloc.
  - (lex.c) pragma_combine_strings was never initialised with a default.
  - (lex.c) Changed the FLOAT_MIN/FLOAT_MAX predefined to reflect
      the C-float limits, not the C-double limits, as the gamedriver's
      floats are somewhere inbetween the two.

27-Nov-2002 (Lars Duening)  (3.3.313)
  - (patchlevel.h, hosts/be/Makefile, hosts/be/set-version) The version
      flags of the BeOS executable are now read from patchlevel.h and not set
      directly in the BeOS Makefile.

27-Nov-2002 (Lars Duening)  (3.3.312)
  - (object.c) Efun transfer() was still incorrect. Funny though that
      nobody noticed it before :-) (reported by Nostradamus).

27-Nov-2002 (Lars Duening)  (3.3.311)
  - (comm.c) The correction of the threads racing condition unfortunately
      introduced a deadlock - Gawain found and fixed it (thanks!).

27-Nov-2002 (Lars Duening)  (3.3.310)
  - (object.c) Corrected the deprecated efun transfer(): the check
      for dest->can_put_and_get() was implemented wrong (reported by
      Nostradamus).

27-Nov-2002 (Lars Duening)  (3.3.309)
  - (comm.c) The thread-cleanup function now locks the structure before
      performing the cleanup (suggested by Gawain).

26-Nov-2002 (Lars Duening)
  - (object.c) restore_object("#0:0") caught the driver in an endless loop
      (thanks, Ctx!).

21-Nov-2002 (Lars Duening)
  - (etc/patch-o-matic) Contributed by Guandalug - thanks!

21-Nov-2002 (Lars Duening)  (3.3.308)
  - (closure, interpret.c, gcollect.c, mapping.c, dumpstat.c, efuns.c,
     call_out.c, comm.c) Merged lfuns with alien-lfuns - the space advantage